--- a/WDLLL/register.html
+++ b/WDLLL/register.html
@@ -39,5 +39,7 @@
   </form>
   <p><a href="home.html">Back to Home</a></p>
   <script src="script.js"></script>
+  <script src="reg.js"></script>
 </body>
 </html>
+
